Fix align

--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -117,7 +117,7 @@
 
 .album-container {
 	/*border: 1px solid;*/
-	/*text-align: center;*/
+	text-align: center;
 	margin-left: .4vw;
 	width: 24.2vw;
 	height: 24.2vw;
